--- a/style.css
+++ b/style.css
@@ -497,8 +497,8 @@ input:checked+.slider::before {
 
     .btns {
         position: fixed;
-        bottom: 0;
-        background-color: white;
+        bottom: 100px;
+        background-color: transparent;
         right: 0;
         left: 0;
         height: 100px;
@@ -538,6 +538,12 @@ input:checked+.slider::before {
 
     .switcher {
         margin: 2rem 0;
+    }
+
+    .attribution {
+        position: absolute;
+        bottom: 10px;
+
     }
 
 }
