--- a/style.css
+++ b/style.css
@@ -470,7 +470,7 @@ input:checked+.slider::before {
         top: 0;
         left: 0;
         right: 0;
-        background-image: url(/assets/images/bg-sidebar-mobile.svg);
+        background-image: url(./assets/images/bg-sidebar-mobile.svg);
         flex-direction: row;
         height: 300px;
         background-size: cover;
