--- a/style.css
+++ b/style.css
@@ -541,8 +541,7 @@ input:checked+.slider::before {
     }
 
     .attribution {
-        position: absolute;
-        bottom: 10px;
+        display: none;
 
     }
 
